--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css" />
 
     <style>
+
+    @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
     *,
     *::after,
     *::before {
@@ -167,7 +169,7 @@
           </button>
           <% if (bearerKey) { %>
             <div class="successMessage_div">
-              <h4>Your bearerKey: <%=bearerKey%></h4>
+              <h4>Your bearerToken: <%=bearerKey%></h4>
             </div>
           <% } %>
         </div>
@@ -207,7 +209,7 @@
         <div class="formScore_div">
           <form method="POST" action="/apiKey">
             <button type="submit" id="apiKey" class="form-submit">
-              <span>API Key</span>
+              <span>Random secret</span>
             </button>
 
             <select name="embaressScore" class="form-select">
@@ -216,23 +218,26 @@
               <option value="<%=i%>"><%=i%></option>
               <% } %>
             </select>
-  
-
           </form>
         </div>
 
-
+        <div style="position: absolute; align-self: center; margin-right: 10%;" class="madeBY_div" id="navbarNav">
+          <div class="badge bg-warning" style="color:floralwhite; margin: 0px; background-color: rgb(148, 20, 20); width: 70px; padding: 4px; border-radius: 40px;">Made by:</div>
+          <p style="font-family: 'Dancing Script', cursive;
+          font-size: 40px;">Daniel Mendes de Albuquerque</p>
+       </div>
         <!-- <button id="apiKey" onclick="window.location.href='/apiKey'">API Key</button> -->
       </div>
   <!-------------------------------------------------------->
 <!-- The left side has GREEN COLOR__ Its Content___ END-->
 
-<!-- Here is the DownSide of the Page COLOR__ Its Content__START-->
+
+<!-- Here is the DownSide of the Page BLUE COLOR__ Its Content__START-->
 <!----------------------dataOutput---------------------------------->
     <div class="response-area data_output">
       <p><%=content%></p>
     </div>
 <!-------------------------------------------------------->
-<!-- Here is the DownSide of the Page COLOR__ Its Content__END-->
+<!-- Here is the DownSide of the Page BLUE COLOR__ Its Content__END-->
   </body>
 </html>
