--- a/views/index.ejs
+++ b/views/index.ejs
@@ -222,6 +222,7 @@
 
             <select name="embaressScore" class="form-select">
               <option value="" data-display="Select">Random Embarassment</option>
+              <!-- for statement used to generate options based on given embarrassment available on API-->
               <% for (let i=1; i<9; i++) { %>
               <option value="<%=i%>"><%=i%></option>
               <% } %>
